SERVER-39938: Pushdown $match on $expr before $lookup